align issue fixed

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 270px;
-  grid-row-gap: 170px;
+  grid-row-gap: 150px;
   justify-items: space-between;
   align-items: space-between;
   background-color: rgb(14, 6, 87);
